force-app/main/default/objects/custom_create193__c/custom_create193__c.object-meta.xml
<CustomObject>
    <label>Custom created object193</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects193</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>