force-app/main/default/objects/custom_create193__c/fields/custom_create_193field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_193field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 193field503</label>
    <type>Checkbox</type>
</CustomField>